# generate_ffmpeg_commands

./: .editorconfig  .gitignore  README.md  ffmpeg_exemple.csv  pyproject.toml  upload.sh
src/generate_ffmpeg_commands/: main.py
