[project]
name = "generate_ffmpeg_commands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["typer>=0.12.3,<0.13", "click>=8.1,<8.2", "loguru>=0.7.3,<1.0"]

[project.scripts]
app = "src.generate_ffmpeg_commands.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]
